--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,5 @@ edition = "2024"
 [dependencies]
 crossbeam = "0.8.4"
 dashmap = "6.1.0"
+derive_more = { version = "2.1.1", features = ["from"] }
 fxhash = "0.2.1"
